This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Reference leak: test_ast test_builtin test_compile
Type: resource usage Stage: resolved
Components: Tests Versions: Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2017-12-18 11:24 by vstinner, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 4916 merged serhiy.storchaka, 2017-12-18 12:10
PR 4918 merged python-dev, 2017-12-18 12:30
Messages (5)
msg308544 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-12-18 11:24
The following tests are leaking references: test_ast test_builtin test_compile.

It seems to be a regression introduced by the commit 3325a6780c81f1ea51190370b5454879c4862a37, bpo-27169.

Serhiy: would you mind to take a look?
msg308545 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-12-18 11:25
Python 3.6 and master are affected by the issue. Buildbots:

* x86 Gentoo Refleaks 3.x
* AMD64 Windows8.1 Refleaks 3.x
* AMD64 Windows8.1 Refleaks 3.6
msg308549 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-12-18 12:29
New changeset bd6ec4d79e8575df3d08f8a89ba721930032714c by Serhiy Storchaka in branch 'master':
bpo-32365: Fix a reference leak when compile __debug__. (#4916)
https://github.com/python/cpython/commit/bd6ec4d79e8575df3d08f8a89ba721930032714c
msg308551 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-12-18 13:11
New changeset 5659743b5693c9e23313a74117948294e35013f4 by Serhiy Storchaka (Miss Islington (bot)) in branch '3.6':
bpo-32365: Fix a reference leak when compile __debug__. (GH-4916) (#4918)
https://github.com/python/cpython/commit/5659743b5693c9e23313a74117948294e35013f4
msg308553 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-12-18 13:12
Thanks Victor.
History
Date User Action Args
2022-04-11 14:58:55adminsetgithub: 76546
2017-12-18 13:12:47serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg308553

stage: patch review -> resolved
2017-12-18 13:11:58serhiy.storchakasetmessages: + msg308551
2017-12-18 12:30:31python-devsetpull_requests: + pull_request4812
2017-12-18 12:29:16serhiy.storchakasetmessages: + msg308549
2017-12-18 12:10:27serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request4810
2017-12-18 11:29:07vstinnersettitle: Referenc leak: test_ast test_builtin test_compile -> Reference leak: test_ast test_builtin test_compile
versions: + Python 3.6
2017-12-18 11:25:54vstinnersetmessages: + msg308545
2017-12-18 11:24:03vstinnercreate