bpo-32365: Fix a reference leak when compile __debug__. (#4916)

It was introduced in bpo-27169.